# cg

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml  run.sh  stop.sh
crates/portal-api/: Cargo.toml
crates/portal-api/src/: app.rs  error.rs  lib.rs  openapi.rs  state.rs  steam_openid.rs
crates/portal-api/src/adapters/: demo_validator.rs  evidence_plugin.rs  evidence_storage.rs  map_pool.rs  mod.rs  review_creator.rs  stats_updater.rs  veto_plugin.rs
crates/portal-api/src/background/: mod.rs
crates/portal-api/src/dto/: common.rs  mod.rs
crates/portal-api/src/extractors/: api_key.rs  auth.rs  mod.rs  permission.rs  validated.rs
crates/portal-api/src/handlers/: admin.rs  auth.rs  availability.rs  awards.rs  bans.rs  demos.rs  dispute.rs  evidence.rs  forfeit.rs  games.rs  internal.rs  invitations.rs  leagues.rs  mod.rs  player_game_profiles.rs  players.rs  progression.rs  result_reviews.rs  results.rs  roles.rs  steam_auth.rs  steam_tracking.rs  teams.rs  tournaments.rs  uploads.rs  users.rs  veto.rs  veto_delegates.rs  veto_ws.rs
crates/portal-api/src/middleware/: mod.rs  request_id.rs
crates/portal-api/src/routes/: admin.rs  auth.rs  availability.rs  demos.rs  disputes.rs  games.rs  internal.rs  invitations.rs  league_teams.rs  leagues.rs  matches.rs  mod.rs  players.rs  teams.rs  tournaments.rs  users.rs  veto_delegates.rs  websocket.rs
crates/portal-api/src/state/: mod.rs  substates.rs
crates/portal-api/src/websocket/: connection.rs  lobby.rs  lobby_manager.rs  messages.rs  mod.rs  timeout_task.rs
crates/portal-api/tests/: auth_test.rs  bans_test.rs  demos_test.rs  dispute_test.rs  evidence_test.rs  forfeit_test.rs  games_test.rs  league_teams_test.rs  leagues_test.rs  match_completion_saga_test.rs  players_test.rs  result_review_test.rs  results_test.rs  roles_test.rs  scoped_permission_test.rs  steam_tracking_test.rs  team_rbac_test.rs  teams_test.rs  tournaments_test.rs  users_test.rs  veto_delegates_test.rs  veto_test.rs  veto_ws_test.rs
crates/portal-api/tests/common/: mod.rs
crates/portal-api/tests/fixtures/: demo_stats.json
crates/portal-api/tests/integration/: auth.rs  awards.rs  bans.rs  demo_evidence.rs  demos.rs  dispute.rs  enrichment_idempotency.rs  evidence.rs  evidence_s3.rs  forfeit.rs  games.rs  league_teams.rs  leagues.rs  lifecycle_automation.rs  lifecycle_races.rs  main.rs  match_completion_saga.rs  partial_write_recovery.rs  player_game_profiles.rs  players.rs  progression.rs  result_review.rs  results.rs  roles.rs  saga_lifecycle.rs  scanner_e2e.rs  standings_idempotency.rs  steam_auth.rs  steam_tracking.rs  users.rs  veto.rs  veto_delegates.rs  veto_ws.rs
crates/portal-app/: Cargo.toml
crates/portal-app/src/: main.rs
crates/portal-cache/: Cargo.toml
crates/portal-cache/src/: lib.rs
crates/portal-cli/: Cargo.toml
crates/portal-cli/src/: config.rs  main.rs  output.rs  repl.rs
crates/portal-cli/src/commands/: api_key.rs  audit.rs  ban.rs  bootstrap.rs  db.rs  demo.rs  game.rs  league_team.rs  mod.rs  player.rs  role.rs  scan.rs  team.rs  user.rs
crates/portal-core/: Cargo.toml
crates/portal-core/src/: errors.rs  ids.rs  lib.rs  permissions.rs  validation.rs
crates/portal-core/src/types/: demo.rs  evidence.rs  league_team.rs  mod.rs  pagination.rs  permission.rs  rating.rs  status.rs  team.rs  tournament.rs  veto.rs
crates/portal-db/: Cargo.toml
crates/portal-db/src/: error.rs  lib.rs  pool.rs  transaction.rs
crates/portal-db/src/adapters/: api_key.rs  audit.rs  availability.rs  award.rs  ban.rs  demo.rs  demo_stats.rs  discovered_match.rs  dispute.rs  evidence.rs  forfeit.rs  league.rs  mod.rs  permission.rs  player_game_profile.rs  player_match_history.rs  player_mm_stats.rs  player_rating_history.rs  refresh_token.rs  result_review.rs  saga.rs  steam_tracking.rs  system_settings.rs  team.rs  user.rs  veto_delegate.rs  veto_lobby_message.rs
crates/portal-db/src/entities/: api_key.rs  audit.rs  availability.rs  award.rs  demo.rs  discovered_match.rs  dispute.rs  evidence.rs  forfeit.rs  game.rs  league.rs  league_team.rs  mod.rs  player.rs  player_match_history.rs  player_mm_stats.rs  player_rating_history.rs  rbac.rs  refresh_token.rs  result_review.rs  steam_tracking.rs  team.rs  tournament.rs  user.rs  veto_delegate.rs  veto_lobby_message.rs
crates/portal-db/src/repositories/: action_item.rs  game.rs  league.rs  mod.rs  rbac.rs  stats.rs  team.rs  user.rs
crates/portal-db/tests/: ban_rules.rs  league_team_repositories.rs  rbac_rules.rs  scoped_permissions.rs  team_rules.rs  transaction_test.rs
crates/portal-domain/: Cargo.toml
crates/portal-domain/src/: auth.rs  jwt.rs  lib.rs  refresh_token.rs
crates/portal-domain/src/entities/: api_key.rs  audit.rs  availability.rs  award.rs  ban.rs  demo.rs  demo_validation.rs  discovered_match.rs  dispute.rs  eligibility.rs  evidence.rs  forfeit.rs  league.rs  league_team.rs  match_lifecycle.rs  mod.rs  player.rs  player_game_profile.rs  player_match_history.rs  player_mm_stats.rs  player_rating_history.rs  refresh_token.rs  result_claim.rs  result_review.rs  saga.rs  schedule_proposal.rs  steam_tracking.rs  team.rs  tournament.rs  user.rs  veto.rs  veto_delegate.rs  veto_lobby_message.rs
crates/portal-domain/src/repositories/: api_key.rs  audit.rs  availability.rs  award.rs  ban.rs  demo.rs  demo_stats.rs  discovered_match.rs  dispute.rs  evidence.rs  forfeit.rs  league.rs  league_team.rs  match_lifecycle.rs  mod.rs  permission.rs  player_game_profile.rs  player_match_history.rs  player_mm_stats.rs  player_rating_history.rs  (+10 more)
crates/portal-plugins/: Cargo.toml
crates/portal-plugins/src/: error.rs  lib.rs  manager.rs  stats.rs  traits.rs  types.rs
crates/portal-scanner/: Cargo.toml
crates/portal-scanner/src/: api_client.rs  config.rs  lib.rs  main.rs  s3_scanner.rs  scanner.rs  stats_converter.rs
crates/portal-storage/: Cargo.toml
crates/portal-storage/src/: error.rs  lib.rs  local.rs  s3.rs
crates/portal-test/: Cargo.toml
crates/portal-test/src/: container.rs  database.rs  fixtures.rs  helpers.rs  lib.rs
(+310 files in other folders)
