[workspace]
resolver = "2"
members = [
    "crates/portal-core",
    "crates/portal-domain",
    "crates/portal-db",
    "crates/portal-cache",
    "crates/portal-storage",
    "crates/portal-api",
    "crates/portal-plugins",
    "crates/portal-test",
    "crates/portal-app",
    "crates/portal-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/community-gaming/gaming-portal"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Validation
validator = { version = "0.19", features = ["derive"] }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Authentication
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }

# Tracing / Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Testing
fake = { version = "3", features = ["derive", "chrono", "uuid"] }
mockall = "0.13"
proptest = "1"
insta = { version = "1", features = ["json", "redactions"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

# Storage
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
bytes = "1"

# Image processing
image = "0.25"
infer = "0.16"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
strip = true
