[workspace]
resolver = "2"
members = [
    "crates/portal-core",
    "crates/portal-domain",
    "crates/portal-db",
    "crates/portal-cache",
    "crates/portal-storage",
    "crates/portal-api",
    "crates/portal-plugins",
    "crates/portal-test",
    "crates/portal-app",
    "crates/portal-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/community-gaming/gaming-portal"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Validation
validator = { version = "0.19", features = ["derive"] }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Authentication
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }

# Tracing / Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Utilities
slug = "0.1"
dashmap = "6"
futures-util = "0.3"

# Testing
fake = { version = "3", features = ["derive", "chrono", "uuid"] }
mockall = "0.13"
proptest = "1"
insta = { version = "1", features = ["json", "redactions"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

# Storage
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
bytes = "1"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Image processing
image = "0.25"
infer = "0.16"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Allow numeric casting warnings - database columns use i64, but counts are safe as u64/i32
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"

# Allow stylistic suggestions that don't improve code clarity
option_if_let_else = "allow"
similar_names = "allow"
struct_field_names = "allow"

# Allow these for now - can be addressed later
too_many_arguments = "allow"
too_many_lines = "allow"
result_large_err = "allow"
redundant_pub_crate = "allow"

# Allow method naming that might conflict with std traits (e.g., from_str)
should_implement_trait = "allow"

# Allow futures that aren't Send - some audit service generics don't require Send
future_not_send = "allow"

# Allow match arms with identical bodies (intentional for error mapping clarity)
match_same_arms = "allow"

# Allow args passed by value that aren't consumed (often for API consistency)
needless_pass_by_value = "allow"

# Allow redundant trait bounds in where clauses (sometimes clearer)
trait_duplication_in_bounds = "allow"

# Allow Option<&T> over &Option<T> - sometimes the latter is clearer
ref_option = "allow"

# Allow doc issues in internal code
doc_markdown = "allow"

# Allow module naming conventions
module_inception = "allow"

# Allow enum variant naming conventions (e.g., all ending in "Error" or "Failed")
enum_variant_names = "allow"

# Allow missing const fn for now
missing_const_for_fn = "allow"

# Allow missing must_use attributes
return_self_not_must_use = "allow"

# Allow needless for_each
needless_for_each = "allow"

# Allow format strings with String args
to_string_in_format_args = "allow"

# Allow unused self in methods that might need it for API consistency
unused_self = "allow"

# Allow number literals without separators
unreadable_literal = "allow"

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
strip = true
