[package]
name = "portal-api"
description = "HTTP API layer for the Gaming Portal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
# Enable dev-mode authentication for testing
test-utils = []

[dependencies]
portal-core = { path = "../portal-core" }
portal-domain = { path = "../portal-domain" }
portal-db = { path = "../portal-db" }
portal-plugins = { path = "../portal-plugins" }
portal-storage = { path = "../portal-storage" }

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }

# Bytes for multipart handling
bytes = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }

# Concurrent data structures
dashmap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Types
uuid = { workspace = true }
chrono = { workspace = true }

# Validation
validator = { workspace = true }

# OpenAPI
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }

# Error handling
thiserror = { workspace = true }

# API key hashing
sha2 = { workspace = true }
hex = { workspace = true }

# Regex validation
once_cell = "1"
regex = "1"

# Tracing
tracing = { workspace = true }

[dev-dependencies]
portal-test = { path = "../portal-test" }
portal-domain = { path = "../portal-domain" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
mime = "0.3"
sqlx = { workspace = true }
tokio-tungstenite = "0.26"
futures-util = { workspace = true }
image = { workspace = true }
tracing-subscriber = { workspace = true }
portal-scanner = { path = "../portal-scanner" }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
reqwest = { workspace = true }
testcontainers = { workspace = true }
anyhow = { workspace = true }

# Single integration test binary (consolidates all test files)
[[test]]
name = "integration"
path = "tests/integration/main.rs"
required-features = ["test-utils"]

[lints]
workspace = true
