[package]
name = "portal-core"
description = "Core types, IDs, and errors for the Gaming Portal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
