[package]
name = "portal-db"
description = "Database access layer for the Gaming Portal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
portal-core = { path = "../portal-core" }
portal-domain = { path = "../portal-domain" }

# Database
sqlx = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Types
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
mockall = { workspace = true }
portal-test = { path = "../portal-test" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
