[package]
name = "portal-domain"
description = "Business logic and domain services for the Gaming Portal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
portal-core = { path = "../portal-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Types
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Password hashing
argon2 = { workspace = true }

# JWT
jsonwebtoken = { workspace = true }

# Tracing
tracing = { workspace = true }

# Random number generation (for seeding algorithms)
rand = "0.9"

# Cryptography (refresh token hashing)
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

[lints]
workspace = true
