[package]
name = "portal-plugins"
description = "Plugin system and built-in game plugins for the Gaming Portal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
portal-core = { path = "../portal-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# HTTP client for external demo service
reqwest = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
