[package]
name = "portal-scanner"
description = "Standalone daemon that polls S3 for new demo files and catalogs them via the portal API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "portal-scanner"
path = "src/main.rs"

[lib]
name = "portal_scanner"
path = "src/lib.rs"

[dependencies]
portal-plugins = { path = "../portal-plugins" }

# Async
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# HTTP client for portal API
reqwest = { workspace = true }

# S3
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }

[lints]
workspace = true
